--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
-The authors of this repository are
+# This file lists all individuals having contributed content to the repository.
+# For how it is generated, see `hack/generate-authors.sh`.
 
 VIOLA KANANURA 
 APO OLUGBENGA
